k8s/pvc-loader.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-loader
  namespace: pts-2026-rictjo
spec:
  containers:
    - name: loader
      image: busybox
      command: ["sleep", "3600"]

      resources:
        requests:
          cpu: "50m"
          memory: "64Mi"
        limits:
          cpu: "50m"
          memory: "64Mi"

      volumeMounts:
        - name: storage
          mountPath: /data
        - name: storage
          mountPath: /chroma_db

  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: chatplan-storage
