k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatplan
  namespace: pts-2026-rictjo
spec:
  selector:
    app: chatplan
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
