k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatplan
  namespace: pts-2026-rictjo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"

    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chatplan.icedc.se
      secretName: chatplan-tls

  rules:
    - host: chatplan.icedc.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatplan
                port:
                  number: 80
